Offer page improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -41,23 +41,25 @@
     }(window, document, 'ttq');
   </script>
   <!-- TikTok Pixel Code End -->
-   <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1217477006533345');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
+  <!-- Meta Pixel Code -->
+  <script>
+    !function (f, b, e, v, n, t, s) {
+      if (f.fbq) return; n = f.fbq = function () {
+        n.callMethod ?
+          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+      };
+      if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
+      n.queue = []; t = b.createElement(e); t.async = !0;
+      t.src = v; s = b.getElementsByTagName(e)[0];
+      s.parentNode.insertBefore(t, s)
+    }(window, document, 'script',
+      'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1217477006533345');
+    fbq('track', 'PageView');
+  </script>
+  <noscript><img height="1" width="1" style="display:none"
+      src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1" /></noscript>
+  <!-- End Meta Pixel Code -->
 </head>
 
 <body>
@@ -140,38 +142,39 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       your life so you can finally stay consistent.
     </p>
 
-  <section class="youtube-prompt-section">
-    <div class="youtube-video-container" style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
-      <div id="youtube-placeholder"
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer; background: url('https://img.youtube.com/vi/MPevL0xPZ9c/hqdefault.jpg') center center / cover no-repeat;">
-        <div
-          style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0,0,0,0.6); border-radius: 50%; padding: 12px;">
-          <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
-            <path d="M8 5v14l11-7z" />
-          </svg>
+    <section class="youtube-prompt-section">
+      <div class="youtube-video-container"
+        style="position: relative; padding-top: 56.25%; height: 0; overflow: hidden;">
+        <div id="youtube-placeholder"
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; cursor: pointer; background: url('https://img.youtube.com/vi/MPevL0xPZ9c/hqdefault.jpg') center center / cover no-repeat;">
+          <div
+            style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: rgba(0,0,0,0.6); border-radius: 50%; padding: 12px;">
+            <svg width="40" height="40" viewBox="0 0 24 24" fill="white" xmlns="http://www.w3.org/2000/svg">
+              <path d="M8 5v14l11-7z" />
+            </svg>
+          </div>
         </div>
       </div>
-    </div>
 
-    <script>
-      document.addEventListener("DOMContentLoaded", function () {
-        const placeholder = document.getElementById("youtube-placeholder");
-        placeholder.addEventListener("click", function () {
-          const iframe = document.createElement("iframe");
-          iframe.setAttribute("src", "https://www.youtube.com/embed/MPevL0xPZ9c?autoplay=1");
-          iframe.setAttribute("frameborder", "0");
-          iframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture");
-          iframe.setAttribute("allowfullscreen", "");
-          iframe.style.width = "100%";
-          iframe.style.height = "100%";
-          iframe.style.position = "absolute";
-          iframe.style.top = "0";
-          iframe.style.left = "0";
-          placeholder.replaceWith(iframe);
+      <script>
+        document.addEventListener("DOMContentLoaded", function () {
+          const placeholder = document.getElementById("youtube-placeholder");
+          placeholder.addEventListener("click", function () {
+            const iframe = document.createElement("iframe");
+            iframe.setAttribute("src", "https://www.youtube.com/embed/MPevL0xPZ9c?autoplay=1");
+            iframe.setAttribute("frameborder", "0");
+            iframe.setAttribute("allow", "accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture");
+            iframe.setAttribute("allowfullscreen", "");
+            iframe.style.width = "100%";
+            iframe.style.height = "100%";
+            iframe.style.position = "absolute";
+            iframe.style.top = "0";
+            iframe.style.left = "0";
+            placeholder.replaceWith(iframe);
+          });
         });
-      });
-    </script>
-  </section>
+      </script>
+    </section>
 
     <h3 class="complete-workout-heading">
       Complete Workout Program
@@ -207,7 +210,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
     <div class="review-section">
       <h3>This Isn’t Just Progress — It’s Personal</h3>
 
-      <!-- <div class="before-after-images">
+      <div class="before-after-images">
         <div class="before-image">
           <img src="#" alt="Before">
           <p class="image-label">Before</p>
@@ -216,7 +219,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <img src="#" alt="After">
           <p class="image-label">After</p>
         </div>
-      </div> -->
+      </div>
 
       <div class="review-container">
         <div class="testimonial-info">
@@ -241,6 +244,11 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
     <!-- Offer Cards -->
     <h3 class="offer-heading">Pick Your Path to Progress</h3>
+    <p class="catchy-line">
+      <strong>One-time programs are fixed</strong>.
+      The <strong>Pro Tracker adjusts workouts and meals over time</strong> based
+      on your performance to unlock your <strong>maximum results</strong>.
+    </p>
     <p class="offer-subtext">Most people never stick to fitness because their plan doesn’t adapt. Yours will.
     </p>
 
@@ -265,6 +273,17 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           </div>
           <div class="per-day">per day</div>
         </div>
+        <div class="additional-info" style="display:none;">
+          <h4>What’s inside this plan</h4>
+          <ul class="offer-includes">
+            <li>🏋️ <strong>7-day workout plan</strong> tailored using your onboarding answers</li>
+            <li>📈 <strong>Simple progress tracking</strong> to stay on course</li>
+            <li>📅 One-time payment, no ongoing fees</li>
+          </ul>
+        </div>
+
+        <!-- ↓ the same toggle link the PTS card already uses -->
+        <div class="toggle-details" style="cursor:pointer;">See more</div>
       </div>
       <!-- END 1-WEEK CARD -->
 
@@ -287,6 +306,17 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
             </div>
             <div class="per-day">per day</div>
           </div>
+          <div class="additional-info" style="display:none;">
+            <h4>What’s inside this plan</h4>
+            <ul class="offer-includes">
+              <li>🏋️ <Strong>4-week workout plan</Strong> tailored using your onboarding answers</li>
+              <li>📈 <Strong>Simple progress tracking</Strong> to stay on course</li>
+              <li>📅 One-time payment, no ongoing fees</li>
+            </ul>
+          </div>
+
+          <!-- ↓ the same toggle link the PTS card already uses -->
+          <div class="toggle-details" style="cursor:pointer;">See more</div>
         </div>
         <!-- END 4-WEEK CARD -->
 
@@ -307,6 +337,17 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
             </div>
             <div class="per-day">per day</div>
           </div>
+          <div class="additional-info" id="info-new" style="display:none;">
+            <h4>What’s inside this plan</h4>
+            <ul class="offer-includes">
+              <li>🏋️ <Strong>12-week workout plan</Strong> built from your onboarding answers</li>
+              <li>🍽️ <Strong>Macro-matched meals</Strong> and <Strong>smart progress tracking</Strong></li>
+              <li>📅 One-time payment — no ongoing fees</li>
+            </ul>
+          </div>
+
+          <!-- ↓ the same toggle link the PTS card already uses -->
+          <div class="toggle-details" style="cursor:pointer;">See more</div>
         </div>
         <!-- END 12-WEEK CARD -->
       </div>
@@ -316,7 +357,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       <!-- Row 3: New Special Offer Card (Full Width) -->
       <div class="offer-card offer-special" data-program="new">
         <div class="offer-left">
-          <div class="duration"><strong>Pro Tracker Subscription</strong></div>
+          <div class="duration"><strong>Pro Tracker</strong></div>
           <div class="full-price" data-full-price="£129.99">
             <span class="price-strikethrough" id="priceSpecialFull">£29.99</span>
             <span class="discount-price" id="priceSpecialDiscount">£9.99</span>
@@ -337,12 +378,10 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         <!-- Moved .additional-info outside .offer-left so it can span the entire card -->
         <div class="additional-info" id="info-new" style="display: none;">
           <h4>Your Complete Fitness Solution</h4>
-          <p class="catchy-line">We ask how you feel. Then your plan adapts — workouts, meals, and progress — all in
-            sync.</p>
           <ul class="offer-includes">
-            <li>🏋️ We adjust your workouts based on how you feel — set by set.</li>
-            <li>🍽️ Your meals match your goals and schedule — automatically.</li>
-            <li>📈 Progress tools that respond to your effort and keep you moving forward.
+            <li>🏋️<Strong> Workouts that adapt</Strong> based on your performance and feedback</li>
+            <li>🍽️ <Strong>Meals that match your routine</Strong> and update as you go</li>
+            <li>📈 <Strong>Progress tools that respond to your effort</Strong> and keep you moving forward
             </li>
           </ul>
         </div>
@@ -369,7 +408,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the <strong>Pro Tracker Subscription</strong>, it renews at £29.99/month unless cancelled.
+        If you choose the <strong>Pro Tracker</strong>, it renews at £29.99/month unless cancelled.
       </p>
 
   </section>
