--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -210,7 +210,7 @@
     <div class="review-section">
       <h3>This Isn’t Just Progress — It’s Personal</h3>
 
-      <div class="before-after-images">
+      <!-- <div class="before-after-images">
         <div class="before-image">
           <img src="#" alt="Before">
           <p class="image-label">Before</p>
@@ -219,7 +219,7 @@
           <img src="#" alt="After">
           <p class="image-label">After</p>
         </div>
-      </div>
+      </div> -->
 
       <div class="review-container">
         <div class="testimonial-info">
