Offer page improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -186,6 +186,42 @@
     </ul>
   </div>
 
+  <!-- Testimonials / Social Proof -->
+  <div class="review-section">
+    <h3>This Isn’t Just Progress — It’s Personal</h3>
+
+    <div class="before-after-images">
+      <div class="before-image">
+        <img src="#" alt="Before">
+        <p class="image-label">Before</p>
+      </div>
+      <div class="after-image">
+        <img src="#" alt="After">
+        <p class="image-label">After</p>
+      </div>
+    </div>
+
+    <div class="review-container">
+      <div class="testimonial-info">
+        <div class="testimonial-left">
+          <strong>Bob</strong>
+        </div>
+        <div class="testimonial-right">
+          <img src="../assets/5-stars.png" alt="5 Stars" class="star-rating">
+        </div>
+      </div>
+      <div class="review-placeholder">
+        <p>I was skeptical at first, but within a few weeks I noticed remarkable changes and felt amazing!</p>
+      </div>
+    </div>
+
+
+    <p class="testimonial-disclaimer">
+      Results may vary. This transformation was achieved using the <strong>Pro Tracker</strong>, part of our tailored
+      training system.
+    </p>
+  </div>
+
   <div class="floating-cta-container" id="floatingCtaContainer">
     <div class="floating-cta fade-in-cta" id="floating-cta">
       <button id="claimProgramBtn" class="claim-program-btn">
@@ -206,53 +242,15 @@
       <p class="first-1000">🔥 Join thousands starting their journey today.</p>
     </div>
 
-    <!-- Testimonials / Social Proof -->
-    <div class="review-section">
-      <h3>This Isn’t Just Progress — It’s Personal</h3>
-
-      <!-- <div class="before-after-images">
-        <div class="before-image">
-          <img src="#" alt="Before">
-          <p class="image-label">Before</p>
-        </div>
-        <div class="after-image">
-          <img src="#" alt="After">
-          <p class="image-label">After</p>
-        </div>
-      </div> -->
-
-      <div class="review-container">
-        <div class="testimonial-info">
-          <div class="testimonial-left">
-            <strong>Bob</strong>
-          </div>
-          <div class="testimonial-right">
-            <img src="../assets/5-stars.png" alt="5 Stars" class="star-rating">
-          </div>
-        </div>
-        <div class="review-placeholder">
-          <p>I was skeptical at first, but within a few weeks I noticed remarkable changes and felt amazing!</p>
-        </div>
-      </div>
-
-
-      <p class="testimonial-disclaimer">
-        Results may vary. This transformation was achieved using the <strong>Pro Tracker</strong>, part of our tailored
-        training system.
-      </p>
-    </div>
-
     <!-- Offer Cards -->
-    <h3 class="offer-heading">Pick Your Path to Progress</h3>
+    <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
     <p class="catchy-line">
-      <strong>One-time programs are fixed</strong>.
-      The <strong>Pro Tracker adjusts workouts and meals over time</strong> based
-      on your performance to unlock your <strong>maximum results</strong>.
+      One-time plans are tailored from the start. The Pro Tracker adapts as you go to keep results coming.
     </p>
-    <p class="offer-subtext">Most people never stick to fitness because their plan doesn’t adapt. Yours will.
-    </p>
+    <!-- <p class="offer-subtext">Most people never stick to fitness because their plan doesn’t adapt. Yours will.
+    </p> -->
 
-    <div class="offer-cards">
+    <div class="offer-cards" id="offerCardsContainer">
       <!-- Row 1: 1-Week Program Card (Full Width) -->
       <div class="offer-card" data-program="1-week">
         <!-- LEFT SIDE: Duration + Price + Details -->
@@ -397,7 +395,7 @@
 
       <!-- FINISH BUTTON -->
       <div class="offer-finish">
-        <button class="finish-btn" id="offerFinishBtn">Claim My Program</button>
+        <button class="finish-btn" id="offerFinishBtn">Continue</button>
       </div>
 
       <p class="final-reassurance" id="offerDisclaimer">
