Form / offer page improvements

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -92,13 +92,13 @@
         </picture>
       </a>
       </div>
-      <div class="dark-mode-button">
+      <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
-      </div>
+      </div> -->
     </div>
 
     <div id="incentive-box">
-      <span>🎁 Complete this form <strong>now</strong> and unlock your first week 100% <strong>free — no card needed to start.</strong></span>
+      <span class="incentive-text">🎁 Complete this form <strong>now</strong> and unlock your first week 100% <strong>free — no card needed to start.</strong></span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
@@ -119,12 +119,18 @@
           Let's personalize your plan - it only takes <strong>60 seconds!</strong><br><br>
           <!-- Please consult a healthcare professional before starting - this isn’t medical advice. -->
         </p>
-        <input type="checkbox" id="agreement-checkbox">
-        By continuing, you confirm that you understand this isn’t medical advice and agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
+        <input type="checkbox" id="agreement-checkbox" checked>
+        By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
         <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
         <a href="cookie-policy.html" target="_blank">Cookie Policy</a>.
       </label>
       <p id="warning-text" class="hidden">To continue, please accept our terms and policies.</p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
     </div>
 
 
