Offer page improvements

--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -245,7 +245,7 @@
     <!-- Offer Cards -->
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
 <p class="plan-diff-text">
-  1-Week plans are tailored from the start. The Pro Tracker adapts as you go.
+ The Pro Tracker adapts your workouts and meals as you go - so your results never stall.
     <a href="#" id="comparePlansLink" class="compare-pill">
     🔍 Compare plans
   </a>
