Form/  offer page improvements

--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -79,18 +79,18 @@
   <div class="scroll">
     <div class="header">
       <div class="logo">
-      <a href="../index.html" class="logo">
-        <picture>
-          <!-- WebP first -->
-          <source type="image/webp" srcset="/assets/rtb-logo-white-224.webp">
+        <a href="../index.html" class="logo">
+          <picture>
+            <!-- WebP first -->
+            <source type="image/webp" srcset="/assets/rtb-logo-white-224.webp">
 
-          <!-- JPEG fallback -->
-          <source type="image/jpeg" srcset="/assets/rtb-logo-white-224.jpg">
+            <!-- JPEG fallback -->
+            <source type="image/jpeg" srcset="/assets/rtb-logo-white-224.jpg">
 
-          <img id="logo" src="/assets/rtb-logo-white-224.webp" alt="Raising The Bar Logo" width="224" height="100"
-            loading="eager" fetchpriority="high" decoding="async">
-        </picture>
-      </a>
+            <img id="logo" src="/assets/rtb-logo-white-224.webp" alt="Raising The Bar Logo" width="224" height="100"
+              loading="eager" fetchpriority="high" decoding="async">
+          </picture>
+        </a>
       </div>
       <!-- <div class="dark-mode-button">
         <img id="darkModeToggle" class="" src="" alt="" height="0px">
@@ -98,7 +98,8 @@
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this form <strong>now</strong> and unlock your first week 100% <strong>free — no card needed to start.</strong></span>
+      <span class="incentive-text">🎁 Complete this form <strong>now</strong> and unlock your first week 100%
+        <strong>free — no card needed to start.</strong></span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
@@ -116,9 +117,16 @@
       </div>
       <label style="line-height: 1.4;">
         <p class="disclaimer">
-          Let's personalize your plan - it only takes <strong>60 seconds!</strong><br><br>
+          <strong class="subheading">No other app does what we do.</strong><br><br>
+          Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
+          <strong>get fit faster</strong>.<br><br>
+          <strong>Complete this 60-second quiz</strong> to get a workout and meal plan tailored to how you train, eat,
+          and recover.
+
+          <br>
           <!-- Please consult a healthcare professional before starting - this isn’t medical advice. -->
         </p>
+        <br>
         <input type="checkbox" id="agreement-checkbox" checked>
         By continuing, you agree to our <a href="tos.html" target="_blank">Terms of Service</a>,
         <a href="privacy-policy.html" target="_blank">Privacy Policy</a>, and
