--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -66,18 +66,31 @@
   <div class="header">
     <div class="logo">
       <a href="../index.html">
-        <img id="logo" class="logo fade-in" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
+        <img id="logo" class="logo" src="../assets/rtb-logo-white.png" alt="Raising The Bar Logo">
       </a>
     </div>
   </div>
 
-  <div class="offer-container fade-in">
+
+  <div class="offer-container">
+    <p class="plan-diff-text-0">
+      <strong>No other app does what we do.</strong><br>
+      Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
+      <strong>get fit faster</strong>.
+      <a href="#compare-plans" id="comparePlansLink0" class="compare-pill">
+        🔍 See how it compares
+      </a>
+    </p>
+
     <div id="dynamicMessageContainer" class="personalized-box">
       <!-- Dynamic content will go here -->
+
     </div>
+
   </div>
 
-  <div class="whats-included-container fade-in">
+
+  <div class="whats-included-container">
     <h2 class="wi2-heading">Inside Your All-In-One Tracker</h2>
     <p class="wi2-description">Everything you need to stay consistent — workouts, meals, and progress that adjust as you
       go.</p>
@@ -120,10 +133,10 @@
           <!-- The pinned panel that never goes higher than the first heading or lower than the last -->
           <div class="wi2-panel">
             <div class="wi2-image-container fade-stage" id="wi2-image-container">
-              <img id="wi2-image" class="fade-in-panel" src="#" alt="Whats Included Image" />
+              <img id="wi2-image" class="-panel" src="#" alt="Whats Included Image" />
             </div>
             <div class="wi2-desc-container fade-stage" id="wi2-desc-container">
-              <p id="wi2-desc" class="fade-in-panel">
+              <p id="wi2-desc" class="-panel">
                 A plan customized to your fitness level, goals, and lifestyle for real, sustainable results.
               </p>
             </div>
@@ -133,7 +146,7 @@
     </div>
   </div>
 
-  <div class="results-section fade-in" id="results-section">
+  <div class="results-section " id="results-section">
     <h2 class="results-heading">
       Adapts to You. Built to Last.
     </h2>
@@ -223,7 +236,7 @@
   </div>
 
   <div class="floating-cta-container" id="floatingCtaContainer">
-    <div class="floating-cta fade-in-cta" id="floating-cta">
+    <div class="floating-cta -cta" id="floating-cta">
       <button id="claimProgramBtn" class="claim-program-btn">
         Claim Your Program
       </button>
@@ -244,12 +257,15 @@
 
     <!-- Offer Cards -->
     <h3 class="offer-heading" id="path-to-progress">Pick Your Path to Progress</h3>
-<p class="plan-diff-text">
- The Pro Tracker adapts your workouts and meals as you go - so your results never stall.
-    <a href="#" id="comparePlansLink" class="compare-pill">
-    🔍 Compare plans
-  </a>
-</p>
+    <p class="plan-diff-text">
+      <strong>No other app does what we do.</strong><br>
+      Other apps just track. <strong>We use what you track to adapt workouts & meals</strong> so you
+      <strong>get fit faster</strong>.
+
+      <a href="#" id="comparePlansLink" class="compare-pill">
+        🔍 See how it compares
+      </a>
+    </p>
     <!-- <p class="offer-subtext">Most people never stick to fitness because their plan doesn’t adapt. Yours will.
     </p> -->
 
@@ -400,7 +416,7 @@
   </section>
 
   <!-- FAQ Section -->
-  <section class="faq-section fade-in">
+  <section class="faq-section ">
     <h2 class="faq-heading">Still have questions?</h2>
     <div class="faq-container">
       <div class="faq-item">
@@ -446,7 +462,7 @@
     </div>
   </section>
 
-  <section class="money-back-guarantee fade-in">
+  <section class="money-back-guarantee ">
     <div class="mbg-container">
       <div class="mbg-content">
         <h2>100% Money-Back Guarantee</h2>
@@ -463,7 +479,7 @@
     </div>
   </section>
 
-  <div class="testimonial-section fade-in">
+  <div class="testimonial-section ">
     <h2>See What Happens When Everything Connects</h2>
     <p class="hero-text">
       Progress from real people, using the same system you're about to unlock.
@@ -482,13 +498,13 @@
     </div>
   </div>
 
-  <div class="dots-container fade-in"></div>
+  <div class="dots-container "></div>
 
   <p class="trust-line">
     Built by a small team of lifters, developers, and designers who’ve been exactly where you are.
   </p>
 
-  <footer class="footer fade-in" id="footer">
+  <footer class="footer " id="footer">
     <div class="footer-content">
       <p>&copy; 2025 Raising The Bar App Ltd. All rights reserved.</p>
       <div class="footer-links">
@@ -514,35 +530,79 @@
   <div id="compareModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-  
+
       <h2>Compare Plans</h2>
-      <p class="subtext">Here's what you unlock when upgrading to Pro.</p>
-  
+      <p class="subtext">Here's what you unlock when using our Pro Tracker.</p>
+
       <div class="table-wrapper">
-      <table class="compare-table">
-        <colgroup>
-          <col class="col-feature">
-          <col class="col-ct">
-          <col class="col-pt">
-        </colgroup>
-        <thead>
-          <tr><th>Feature</th><th>Core Tracker</th><th>Pro Tracker</th></tr>
-        </thead>
-        <tbody>
-          <tr><td>Workout Logging</td><td>✅</td><td>✅</td></tr>
-          <tr><td>Adaptive Progression</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Progress Score</td><td>❌</td><td>✅</td></tr>
-          <tr><td>My Progress (Trends &amp; Insights)</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Coach Feedback &amp; Weekly Insights</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Nutrition Tracker</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Macro-Matched Meals</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Meal Prep Mode &amp; Shopping List</td><td>❌</td><td>✅</td></tr>
-          <tr><td>XP Bonuses &amp; Weekly Recaps</td><td>❌</td><td>✅</td></tr>
-          <tr><td>Video Tutorials</td><td>❌</td><td>✅</td></tr>
-        </tbody>
-      </table>
-    </div>
-  
+        <table class="compare-table">
+          <colgroup>
+            <col class="col-feature">
+            <col class="col-ct">
+            <col class="col-pt">
+          </colgroup>
+          <thead>
+            <tr>
+              <th>Feature</th>
+              <th>Most Apps</th>
+              <th>Pro Tracker</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Workout Logging</td>
+              <td>✅</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Adaptive Progression</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Progress Score</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>My Progress (Trends &amp; Insights)</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Coach Feedback &amp; Weekly Insights</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Nutrition Tracker</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Macro-Matched Meals</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Meal Prep Mode &amp; Shopping List</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>XP Bonuses &amp; Weekly Recaps</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+            <tr>
+              <td>Video Tutorials</td>
+              <td>❌</td>
+              <td>✅</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
       <p class="testimonial">
         “I didn’t realize how much I was missing until I unlocked Pro Tracker. It made everything click.”<br>
         – Alice, lost 7 kg with Pro
