Form/  offer page improvements

--- a/client/index2.html
+++ b/client/index2.html
@@ -25,6 +25,7 @@
     <li><a href="pages/dmca-policy.html">DMCA Policy</a></li>
     <li><a href="pages/eula.html">EULA</a></li>
     <li><a href="pages/forms.html">Forms</a></li>
+    <li><a href="pages/kickstart-guide.html">Kickstart Guide</a></li>
     <li><a href="pages/landing-page.html">Landing Page</a></li>
     <li><a href="pages/legal-overview.html">Legal Overview</a></li>
     <li><a href="pages/log-in.html">Log In</a></li>
