--- a/client/pages/forms.html
+++ b/client/pages/forms.html
@@ -98,8 +98,7 @@
     </div>
 
     <div id="incentive-box">
-      <span class="incentive-text">🎁 Complete this form <strong>now</strong> and unlock your first week 100%
-        <strong>free — no card needed to start.</strong></span>
+      <span class="incentive-text">🎁 Complete this quiz <strong>now</strong> to get your <strong>free Kickstart Guide</strong> - plus an exclusive discount. </span>
       <button id="incentive-close" aria-label="Close">&times;</button>
     </div>
 
