--- a/client/pages/log-in-checkout.html
+++ b/client/pages/log-in-checkout.html
@@ -77,9 +77,9 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
       <!-- Dynamic plan summary (populated by JS) -->
       <div id="planSummary" class="plan-summary"></div>
 
-      <h2 style="text-align: center;">Welcome Back</h2>
+      <h2 style="text-align: center;">Just One More Step</h2>
       <p class="subheading">
-        Log in, review your order and complete payment – all in one quick step.
+        Log in, review your order and complete payment - all in one quick step.
       </p>
 
       <form id="loginCheckoutForm" novalidate>
