--- a/client/pages/offer.html
+++ b/client/pages/offer.html
@@ -270,19 +270,15 @@
     </p> -->
 
     <div class="offer-cards" id="offerCardsContainer">
-      <!-- Row 1: 1-Week Program Card (Full Width) -->
-      <div class="offer-card" data-program="1-week">
-        <!-- LEFT SIDE: Duration + Price + Details -->
+      <!-- <div class="offer-card" data-program="1-week">
         <div class="offer-left">
           <div class="duration"><strong>1-Week Program</strong></div>
-          <!-- <p class="card-subheading">Starter Plan</p> -->
           <p class="card-subtext">Tailored intro — no card required.</p>
           <div class="full-price" data-full-price="£24.99">
             <span class="price-strikethrough" id="price1WeekFull">£24.99</span>
             <span class="discount-price" id="price1WeekDiscount">FREE!</span>
           </div>
         </div>
-        <!-- RIGHT SIDE: Cost/Day -->
         <div class="offer-right">
           <div class="currency-tag">GBP</div>
           <div class="cost-per-day">
@@ -298,10 +294,8 @@
             <li>📅 One-time payment, no ongoing fees</li>
           </ul>
         </div>
-
-        <!-- ↓ the same toggle link the PTS card already uses -->
         <div class="toggle-details" style="cursor:pointer;">See more</div>
-      </div>
+      </div> -->
       <!-- END 1-WEEK CARD -->
 
       <!-- Row 2: Two Side-by-Side Cards for 4-Week and 12-Week Programs -->
@@ -410,7 +404,7 @@
         By proceeding, you confirm that you’ve read and agree to our
         <a href="tos.html" target="_blank">terms of service</a> and
         <a href="refund-policy.html" target="_blank">refund policy</a>.
-        If you choose the <strong>Pro Tracker</strong>, it renews at £29.99/month unless cancelled.
+        If you choose the <strong>Pro Tracker</strong>, it renews at £29.99/month unless cancelled. Cancellations take effect at the end of the current billing cycle.
       </p>
 
   </section>
