--- a/client/pages/sign-up.html
+++ b/client/pages/sign-up.html
@@ -71,9 +71,9 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
 
   <div class="signup-container">
     <div class="signup-box">
-      <h2>Create Your Account</h2>
+      <h2>Your Plan is Ready</h2>
       <p class="subheading">
-        Create your account to access your personalised tracker—workouts, meals, and progress all in one place.
+        Create your account to access everything — workouts, meals, and progress tracking tailored to you.
       </p>
   
       <form id="signup-form" novalidate>
@@ -122,7 +122,7 @@ src="https://www.facebook.com/tr?id=1217477006533345&ev=PageView&noscript=1"
           <span class="error-message" id="confirm-error" role="alert"></span>
         </div>
   
-        <button type="submit" class="signup-btn">Claim My Program</button>
+        <button type="submit" class="signup-btn">Claim Your Program</button>
       </form>
   
       <p class="terms">
