--- a/old/12-week-program.html
+++ b/old/12-week-program.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>12-Week Program</title>
+  <title>Kickstart Guide</title>
 
   <!-- Google Fonts -->
   <link
